--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     margin-left: 10px;
 } */
 
-#bag{
+/* #bag{
     width: 200px;
     height: 500px;
     margin: 0 auto;
@@ -48,4 +48,4 @@
 #controls{
     width: 120px;
     margin: 0 auto;
-}
+} */
